remove outdated question info

--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -77,7 +77,7 @@
     </div>  
     <ul class="submenu">    
         <li><p>看是要買長一點的線或者是架個無線網路。如果只是在書桌上使用，那麼兩公尺已經綽綽有餘～
-冰箱的部份，大部分都是一代一代傳承下來的好二手三手冰箱囉！如果室友之間想要集資買新的冰箱當然也沒問題。記得，放置冰箱務必查詢住宿服務組關於電器之規定，每學期全寢共要負擔400元的電費唷 :)</p></li>  
+冰箱的部份，大部分都是一代一代傳承下來的好二手三手冰箱囉！如果室友之間想要集資買新的冰箱當然也沒問題 :)</p></li>  
     </ul>
     </li>
 </ul>
