Update newcomer shopping UI

--- a/app/views/layouts/_newcomer_footer.html.erb
+++ b/app/views/layouts/_newcomer_footer.html.erb
@@ -12,7 +12,7 @@
 		<div class="col-lg-2 col-sm-3">
 			<ul>
 				<li class="footer-header">團購</li>
-				<li><%= link_to "小七團購", newcomer_essentialShopping_path(anchor: "top") %></li>
+				<li><%= link_to "小七團購", newcomer_essentialShopping_path %></li>
 				<li><%= link_to "金牛頓團購", newcomer_newtonA_path %></li>
 				<li><%= link_to "計算機團購", newcomer_shopping_path(anchor: "calculator") %></li>
 				<li><%= link_to "桌燈團購", newcomer_shopping_path(anchor: "lamp") %></li>
