--- a/app/views/layouts/_newcomer_header.html.erb
+++ b/app/views/layouts/_newcomer_header.html.erb
@@ -22,9 +22,9 @@
 				<li class="dropdown"> 
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">團購 <span class="caret"></span></a> 
 					<ul class="dropdown-menu"> 
-						<li><%= link_to "新生團購", newcomer_shopping_path(anchor: "top") %></li>
+						<li><%= link_to "新生團購", newcomer_shopping_path %></li>
 						<li><%= link_to "Newton'sA 學生特價", newcomer_newtonA_path %></li>
-						<li><%= link_to "小七精美用品促銷", newcomer_essentialShopping_path(anchor: "top") %></li>
+						<li><%= link_to "小七精美用品促銷", newcomer_essentialShopping_path %></li>
 					</ul>
 				</li> 
 				<li class="dropdown">
