added source link to original author

--- a/app/assets/stylesheets/newcomer/qna.scss
+++ b/app/assets/stylesheets/newcomer/qna.scss
@@ -1,3 +1,8 @@
+/* 
+  accordion source code : Alex Begin CSS+HTML only accordion , http://codepen.io/abergin/pen/ihlDf 
+  modified by theblackcat102 
+*/
+
 * {
   margin: 0;
   padding: 0;
