--- a/app/views/newcomer/shopping.html.erb
+++ b/app/views/newcomer/shopping.html.erb
@@ -132,7 +132,7 @@
 
 <section class="buy-it">
 	<h2>新生團購</h2>
-	<a href="https://goo.gl/forms/tAi1mlzuKOqJfACu1" target="_blank"><button class="btn-2">點我訂購</button></a>
+	<a href="https://zhirui1.typeform.com/to/prJKoM" target="_blank"><button class="btn-2">點我訂購</button></a>
 </section>
 
 <%= javascript_include_tag 'newcomer/shopping' %>
