--- a/app/views/newcomer/main.html.erb
+++ b/app/views/newcomer/main.html.erb
@@ -56,3 +56,26 @@
 		</p> 
 	</div>
 </section>
+<div class="bottom"></div>
+</section>
+<section id="qna">
+<div class="container">
+    <h2>新生提問系統 精選問答集</h2>
+    <p>
+    <%= link_to qna_path do %>
+        <button class="btn-3">觀看</button>
+    <% end %>
+    </p> 
+</div>
+<div class="bottom"></div>
+</section>
+<section id="download"> 
+    <div class="container">
+        <h2>實體新生包</h2>
+        <p>
+        <%= link_to "/pdf/newcomer/學聯新生包手冊.pdf", :target => '_blank' do %>
+            <button class="btn-8">下載</button>
+        <% end %>
+        </p>
+    </div>
+</section>
