Fix newcomer qna bug

--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="css/normalize.css">
-<%= stylesheet_link_tag 'qna' %> 
+<%= stylesheet_link_tag 'newcomer/qna' %> 
 
 <div class="accordion">
 <h1>新生提問系統 精選問答集</h1>
@@ -63,7 +62,7 @@
 </div>
 <section class="end-qna">
 <h4>還有問題嗎？去新生提問平台發文吧，我們有專人為您解疑喔！</h4>
-<a href="https://stunion.nctu.edu.tw/question"><button class="btn-1">提問平台</button></a>
+<a href="https://stunion.nctu.edu.tw/question" target="_blank"><button class="btn-1">提問平台</button></a>
 </section>
 <div class="spacing"></div>
 
