--- a/app/assets/stylesheets/newcomer/qna.scss
+++ b/app/assets/stylesheets/newcomer/qna.scss
@@ -96,6 +96,7 @@ p{
       padding: 0;
       margin: 0;
       border-radius:7px;
+      border-top: 1px dotted $grey;
       @extend .flipIn;
         
       &:nth-of-type(1){
@@ -109,7 +110,27 @@ p{
       &:nth-of-type(3){
         animation-delay: 1.0s;
       }
-      
+
+      &:nth-of-type(4){
+        animation-delay: 1.25s;
+      }
+
+      &:nth-of-type(5){
+        animation-delay: 1.5s;
+      }
+
+      &:nth-of-type(6){
+        animation-delay: 1.75s;
+      }
+
+      &:nth-of-type(7){
+        animation-delay: 2.0s;
+      }
+
+      &:nth-of-type(8){
+        animation-delay: 2.25s;
+      }
+
       &:last-of-type{
         padding-bottom: 0;
       }
