Fix newcomer shopping page price UI problem

--- a/app/views/newcomer/shopping.html.erb
+++ b/app/views/newcomer/shopping.html.erb
@@ -23,7 +23,7 @@
 					</ul>
 					</p>            
 					<div class="row">                
-						<div class="col-xs-12 col-md-8">                    
+						<div class="col-xs-12">                    
 							<p class="lead">原價: 1800 | 售: 999</p>                
 						</div>                
 					</div>
@@ -47,7 +47,7 @@
 					</ul>            
 					</p>            
 					<div class="row">                
-						<div class="col-xs-12 col-md-8">                    
+						<div class="col-xs-12">                    
 							<p class="lead">原價: 480 | 售: 380</p>               
 						</div>                
 					</div>
@@ -72,7 +72,7 @@
 					</ul>
 					</p>            
 					<div class="row">                
-						<div class="col-xs-12 col-md-8">                    
+						<div class="col-xs-12">                    
 							<p class="lead">原價: 2990 | 售: 1999  </p>                
 						</div>                
 					</div>
@@ -95,7 +95,7 @@
 					</ul>
 					</p>            
 					<div class="row">                
-						<div class="col-xs-12 col-md-8">                  
+						<div class="col-xs-12">                  
 							<p class="lead">原價: 780 |  售: 650</p>                
 						</div>                
 					</div>
@@ -120,7 +120,7 @@
 					</ul>
 					</p>            
 					<div class="row">                
-						<div class="col-xs-12 col-md-8">                    
+						<div class="col-xs-12">                    
 							<p class="lead">原價: 1699 | 售: 1299</p>                
 						</div>                
 					</div>
