--- a/app/views/layouts/newcomer.html.erb
+++ b/app/views/layouts/newcomer.html.erb
@@ -31,16 +31,29 @@
         <%= yield %>
         <%= render "layouts/newcomer_footer" %>
 
-        <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		// Stunion GA
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-81683881-2', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-81683881-2', 'auto');
+		ga('send', 'pageview');
 
-</script>
-        <%= javascript_include_tag 'newcomer/newcomer' %>
+		// N+ GA
+		<% if Rails.env.production? %>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-54567036-1', 'auto');
+			ga('send', 'pageview');
+		<% end %>
+	</script>
+
+
+	<%= javascript_include_tag 'newcomer/newcomer' %>
     </body>
 </html>
