update policy page

--- a/app/views/main/policy_page.html.erb
+++ b/app/views/main/policy_page.html.erb
@@ -1,4 +1,5 @@
-This Privacy Policy governs the manner in which NCTU+ collects, uses, maintains and discloses information collected from users (each, a "User") of the <a href="nctuplus.nctucs.net">nctuplus.nctucs.net</a> website ("Site"). This privacy policy applies to the Site and all products and services offered by NCTU+.<br><br>
+This Privacy Policy governs the manner in which NCTU+ collects, uses, maintains and discloses information collected from users (each, a "User")
+of the <a href="<%=root_url%>">plus.nctu.edu.tw</a> website ("Site"). This privacy policy applies to the Site and all products and services offered by NCTU+.<br><br>
 
 <b>Personal identification information</b><br><br>
 
@@ -40,12 +41,9 @@ By using this Site, you signify your acceptance of this policy. If you do not ag
 <b>Contacting us</b><br><br>
 
 If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:<br>
-<a href="nctuplus.nctucs.net">NCTU+</a><br>
-<a href="nctuplus.nctucs.net">nctuplus.nctucs.net</a><br>
-新竹市大學路1001號<br>
-035712121<br>
+新竹市大學路1001號 (03)5712121<br>
 nctuplus@gmail.com<br>
 <br>
-This document was last updated on January 18, 2015<br><br>
+This document was last updated on August 22, 2016<br><br>
 
 <div style="font-size:10px;color:gray;">Privacy policy created by <a style="font-size:10px;color:gray;text-decoration:none;cursor:default;" href="http://www.generateprivacypolicy.com" target="_blank">Generate Privacy Policy</a></div>
