Update newcomer procedure

--- a/app/views/newcomer/procedure.html.erb
+++ b/app/views/newcomer/procedure.html.erb
@@ -5,7 +5,19 @@
 		<div class="page-header">
 			<h1 id="timeline">重要程序</h1>
 		</div>
-		<ul class="timeline">
+		<ul class="timeline">	
+			<li id="timebox" class="timeline-inverted">
+				<div class="timeline-badge danger"><i class="fa fa-money"></i></div>
+				<div class="timeline-panel">
+					<div class="timeline-heading">
+						<h4 class="timeline-title">09.02 － 14</h4>
+					</div>
+					<div class="timeline-body">
+						<p>繳交學雜費</p>
+					</div>
+				</div>
+			</li>
+
 			<li id="timebox">
 				<div class="timeline-badge primary"><i class="fa fa-building"></i></div>
 				<div class="timeline-panel">
