--- a/app/views/bulletin/index.html.erb
+++ b/app/views/bulletin/index.html.erb
@@ -31,6 +31,7 @@
 			<li><a href="/bulletin?q[article_type_eq]=true">最新消息</a></li>
 			<li><a href="/bulletin?q[article_type_eq]=false">網站改版</a></li>
                         <li><a href="/slogan">首頁標語</a></li>
+                        <li><a href="/backgrounds">首頁背景</a></li>
 	   	 </ul>
 	</div>
 
