--- a/app/views/backgrounds/index.html.erb
+++ b/app/views/backgrounds/index.html.erb
@@ -14,6 +14,14 @@
 	width: 300px;	
 }
 
+.modal-dialog{
+    position: relative;
+    display: table; //This is important 
+    overflow-y: auto;    
+    overflow-x: auto;
+    width: auto;
+    min-width: 300px;   
+}
 </style>
 
 <!DOCTYPE html>
@@ -37,32 +45,50 @@
 
 	<div class ="col-sm-10">
 		<div class = "form-inline">
-	    	<%= form_for Slogan.new , :url => { :controller => 'slogan', :action => 'create' } do |f| %>
-	        <div class = "form-group">
-                  <strong>標語：&nbsp;</strong><%= f.text_area :description, class: "form-control", :rows => "2", :cols => "25" %>
-	        </div>
+	    	<%= form_for Background.new , :url => { :controller => 'backgrounds', :action => 'create' } do |f| %>
+                  <strong>背景：</strong>
+	          <div class = "form-group">
+		    <%= f.file_field :image %>
+	          </div>
 	            <%= f.submit "直接刊登", class: "btn btn-warning", :data => { :confirm => "確定要刊登嗎？" }  %>
-	        <% end %>
+                <% end %>
 		</div>
 		<table class="table table-bordered table-striped">
 		      <thead>
 		        <tr>
-		          <th class="col_1">標語</th>
+		          <th class="col_1">背景</th>
 		          <th class="col_2">建立時間</th>
 		          <th class="col_3">修改時間</th>
 		          <th class="col_4"></th>
 		        </tr>
 		      </thead>
 		      <tbody>
-		          <% @slogan.each do |t| %>
+		          <% @backgrounds.each do |t| %>
 		            <tr>
-		              <td class="col_1"><span class="glyphicon glyphicon-chevron-right"></span>&nbsp;&nbsp;<%= t.description %></td>
+		              <td class="col_1"><span class="glyphicon glyphicon-chevron-right"></span>&nbsp;&nbsp;
+				<!-- Button trigger modal -->
+				<input type="button" style="width:100px;height:100px;vertical-align:middle;background-image:url('<%=t.image(:thumb)%>')" data-toggle="modal" data-target="#myModal-<%=t.id%>">
+				<!-- Modal -->
+				<div class="modal fade" id="myModal-<%=t.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel">Show</h4>
+				      </div>
+				      <div class="modal-body">
+					<img src="<%= t.image(:original) %>" class="img-responsive" alt="Responsive image">
+				      </div>
+				    </div>
+				  </div>
+				</div>
+			      </td>
 		         	  <td class="col_2"><font color="gray" valign="bottom">
 						20<%= t.created_at.strftime("%y/%m/%d %H:%M") %></font></td>
 		              <td class="col_3"><font color="gray" valign="bottom">
 		              	20<%= t.updated_at.strftime("%y/%m/%d %H:%M") %></font></td>
-		              <td class="col_4"><%= link_to "編輯", edit_slogan_path(t) %>&nbsp;&nbsp;
-		              <%= link_to '刪除', slogan_path(t), :method => :delete, :data => { :confirm => "確定要刪除此標語嗎？" } %></td>
+		              <td class="col_4"><%= link_to "編輯", edit_background_path(t) %>&nbsp;&nbsp;
+		              <%= link_to '刪除', t, :method => :delete, :data => { :confirm => "確定要刪除此背景嗎？" } %></td>
 		            </tr>
 		          <%end%>
 		      </tbody>
@@ -80,8 +106,8 @@ $('ul.nav a[href="'+ url +'"]').parent().addClass('active');
 $('ul.nav a').filter(function() {
     return this.href == url;
 }).parent().addClass('active');
+
 </script>
 
 </body>
 </html>
-
