login with NCTU OAuth

--- a/app/views/newcomer/chooseClass.html.erb
+++ b/app/views/newcomer/chooseClass.html.erb
@@ -16,7 +16,7 @@
 					<div class="text">進入NCTU+首頁，進行登入動作</div>
 				</div>
 				<div class="content">
-					NCTU+可同時挷定交大E3、Facebook、Google+帳號。
+					NCTU+可同時挷定單一入口、Facebook、Google+帳號。
 					<%= image_tag 'newcomer/chooseClass/0.png', :class => "img-responsive" %>
 				</div>
 			</div>
