--- a/app/views/past_exams/index.html.erb
+++ b/app/views/past_exams/index.html.erb
@@ -119,7 +119,7 @@
 			//console.log($(this).find("a"));
 		});
 		$(".clickable-row").click(function() {
-      <% if current_user.try(:hasE3?) %>
+      <% if current_user.try(:hasNctu?) %>
 			goToHref($(this).attr("href"),true);
       <% else %>
       toastr['warning']("必須有E3身分才可下載喔!");
