--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -6,7 +6,7 @@
 <br>
 	<%= form_for current_user,url: "/user/update",html:{class:"form-horizontal"} do |f| %>  <!-- user_update_path -->
 	
-    <% if current_user.hasE3? %>
+    <% if current_user.hasNctu? %>
 		<div class="form-group">
 			<h4><%=label_tag '分享課表',"分享課表",class:"col-sm-2 control-label"%></h4>
 			<div class="col-md-9">
@@ -20,7 +20,7 @@
 			<%=f.text_field :name, :class=>"form-control", :maxlength=>16 %>
 		</div>
 	</div>
-    <% if current_user.hasE3? %>
+    <% if current_user.hasNctu? %>
 		<div class="form-group "> 
 			<h4><%=label_tag 'Email', "信箱", class:"col-sm-2 control-label" %></h4>
 			<div class="col-md-9">
