--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
 					</li>
 				<% end %>		
 				<li class="dropdown">
-					<a class="">全校課程</a>
+                                  <a class="dropdown-toggle" data-toggle="dropdown-menu">全校課程<span class="caret"></span></a>
 					<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
 						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
 							<a href="/courses/" style="color:white;">全校課程</a>
