--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -37,9 +37,6 @@ td.date{
 <div class="bg-image"></div>
 
 <header>
-
-	<%=session[:zzz]%>
-
 	<div class="header-content text-left ">
 		<div class="container">
 		<div class="header-content-inner ">
@@ -90,12 +87,12 @@ td.date{
 			</div>
 
 			<div class="header-right ">
-			    <% if params[:bid]!=nil  && Background.find(params[:bid].to_i) == Background.last && current_user  %>
+			    <% if @checkimg  %>
 				<h2>
 				確認是否上傳此背景?
 				</h2>
 				<br><br>
-				<%= link_to "取消", Background.last, method: :delete, class: "btn sm btn-default" %>
+				<%= link_to "取消", @backgrounds, method: :delete, class: "btn sm btn-default" %>
 				<%= link_to "確認", backgrounds_path, class: "btn sm btn-primary" %>
                             <% else %>
                                 <h2>
@@ -212,13 +209,9 @@ $(document).ready(function(){
 	//$("#brief-intro").html(brief_intro[Math.floor(Math.random()*brief_intro.length)]);
 	//var bgs = ['url(<%=asset_path "new-index/bg1.jpg"%>)','url(<%=asset_path "new-index/bg2.jpg"%>)','url(<%=asset_path "new-index/bg3.jpg"%>)'];
         var t1=0;
-	<% if params[:bid]!= nil && Background.find(params[:bid].to_i)!=nil %>
-	  bgs = [ 'url(<%=Background.find(params[:bid].to_i).image(:original)%>)' ]
-	<% else %>
-	  var bgs = [<% @backgrounds.collect do |img|%>
-	  'url(<%=img.image(:original)%>)',
-	  <% end %>]
-	<% end %>
+	var bgs = [<% @backgrounds.collect do |img|%>
+	            'url(<%=img.image(:original)%>)',
+	           <% end %>]
 	$('.bg-image').css('background-image', bgs[t1]);
 	setInterval(function() {
 		$('.bg-image').fadeOut(3000, function(){
