--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -53,6 +53,9 @@
 						</a>
 						{%= cd.dept_name %}
 						{%= cd.teacher_name %}
+            {% if(o.highest_score_ct && o.highest_score_ct.indexOf(cd.id) != -1) { %}
+            <!-- highest score -->
+            {% } %}
 						<span class="pull-right">
 						{% if(o.add_to_cart){ %}
 								<button title="新增至課程收藏" data-toggle="tooltip" class="btn btn-info btn-circle" onclick="add_to_cart({%=cd.id%},'add')">
