--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -87,6 +87,14 @@ td.date{
 			</div>
 
 			<div class="header-right ">
+			    <% if @checkimg  %>
+				<h2>
+				確認是否上傳此背景?
+				</h2>
+				<br><br>
+				<%= link_to "取消", @backgrounds, method: :delete, class: "btn sm btn-default" %>
+				<%= link_to "確認", backgrounds_path, class: "btn sm btn-primary" %>
+                            <% else %>
                                 <h2>
                                   <% @slogans.each do |t| %>
                                   <%= sanitize(t.description) %>
@@ -95,14 +103,14 @@ td.date{
 				<br><br>
 				<% if !current_user %>
 					<a href="/login" class="btn btn-primary btn-xl page-scroll" style="font-size:20px;font-weight:300;margin-right:20px;" data-no-turbolink>登入</a>
-				<% end %>
+			        <% end %>
+			    <% end %>
 			</div>	
     	</div>
 		</div>
   </div>
 	<div class="text-center circle-bar"></div>
 </header>
-
 
 <section id="intro" >
 	<div class="container">
@@ -199,8 +207,11 @@ $(document).ready(function(){
 	});
 	var brief_intro =["即將畢業，給自己一個安心，<br>快登入使用算學分功能！","機會是留給有準備的人，<br>快登入使用模擬排課！","手邊有用不到的教科書嗎？<br>快登入使用二手書平台！","想宣傳精彩的活動嗎？<br>快登入使用活動 BAR！"];
 	//$("#brief-intro").html(brief_intro[Math.floor(Math.random()*brief_intro.length)]);
-	var bgs = ['url(<%=asset_path "new-index/bg1.jpg"%>)','url(<%=asset_path "new-index/bg2.jpg"%>)','url(<%=asset_path "new-index/bg3.jpg"%>)'];
-	var t1=0;
+	//var bgs = ['url(<%=asset_path "new-index/bg1.jpg"%>)','url(<%=asset_path "new-index/bg2.jpg"%>)','url(<%=asset_path "new-index/bg3.jpg"%>)'];
+        var t1=0;
+	var bgs = [<% @backgrounds.collect do |img|%>
+	            'url(<%=img.image(:original)%>)',
+	           <% end %>]
 	$('.bg-image').css('background-image', bgs[t1]);
 	setInterval(function() {
 		$('.bg-image').fadeOut(3000, function(){
