--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -209,9 +209,7 @@ $(document).ready(function(){
 	//$("#brief-intro").html(brief_intro[Math.floor(Math.random()*brief_intro.length)]);
 	//var bgs = ['url(<%=asset_path "new-index/bg1.jpg"%>)','url(<%=asset_path "new-index/bg2.jpg"%>)','url(<%=asset_path "new-index/bg3.jpg"%>)'];
         var t1=0;
-	var bgs = [<% @backgrounds.collect do |img|%>
-	            'url(<%=img.image(:original)%>)',
-	           <% end %>]
+	var bgs = ['url(<%=asset_path "new-index/bg1.jpg"%>)','url(<%=asset_path "new-index/bg2.jpg"%>)','url(<%=asset_path "new-index/bg3.jpg"%>)'];
 	$('.bg-image').css('background-image', bgs[t1]);
 	setInterval(function() {
 		$('.bg-image').fadeOut(3000, function(){
