Remove string truncation on title, location, org. Remove form-button-wrapper and form-text-wrapper class Add control-wrapper Fix RWD event form

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -60,26 +60,14 @@
 ------------------------*/
 
 .form-wrapper{
-	margin: 40px auto;
-    padding: 30px 3px;
-    height: 100px;
+    padding: 10px;
+    height: auto;
 	background-color: rgba(100, 100, 100, 0.7);
 }
 
-@media screen and (max-width: 768px){ 
-	.form-wrapper{
-		height: 130px;
-	}
-}
-
-.form-button-wrapper{
-	@extend  .col-xs-6, .col-sm-2, .col-md-2;
-	padding: 3px auto;
-}
-
-.form-text-wrapper{
-	@extend .col-xs-12, .col-sm-6, .col-md-8;
-	padding: 3px auto;
+.control-wrapper{
+	padding-bottom: 10px;
+	padding-top: 10px;
 }
 
 /*------------------------
