--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -94,7 +94,7 @@
 	<!--- form group --->
 	<div class="container">
 		<div class="row">
-			<%=form_tag "/events", {class:"form-wrapper form-horizontal center-block", role:"form", method:"GET"} do %>
+			<%=form_tag "/events", {class:"form-wrapper form-horizontal center-block col-xs-12", role:"form", method:"GET"} do %>
 				
 					<div class="row">
 						<div class="control-wrapper col-xs-6 col-sm-3 col-md-2">
@@ -127,85 +127,97 @@
 
 
 			<!-- Current Activities -->
-			<div id="event-block1" class="events-block">
+			<div class="events-block col-xs-12">
 				<h1>近期活動</h1>
-				<div id="events-container1" class="events-container" style="">
-					<!-- list all events -->
-					
-					<!-- current events -->
-					<% @current_events.each do |event| %>
-						<div class="event-block-wrapper">
-							<div class="event-block <%=event.get_block_theme%>">
-								<!-- small class="event-type"><%=event.event_type%></small -->
-								<div class="event-date <%=event.get_time_css%> "><%=event.get_time%></div>
-								<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block__top clickable-hover" 
-										onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
-									<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
-								</div>
-								<div class="event-block__bottom">
-									<small class="event-title text-right"><%= event.organization%></small>
-									<strong><%= event.title %></strong>
-									<small class="event-location"><%= event.location %></small>
-									<% if event.user_id==current_user.try(:id)%>
-										<%link_to fa_icon("pencil-square lg"), edit_event_path(event),"data-no-turbolink"=>true%>
-									<% end %>
-								</div>
+				<!-- list all events -->
+				
+				<!-- current events -->
+				<% @current_events.each do |event| %>
+					<div class="event-block-wrapper col-md-3 col-sm-6 col-xs-12">
+						<div class="event-block <%=event.get_block_theme%>">
+							<!-- small class="event-type"><%=event.event_type%></small -->
+							<div class="event-date <%=event.get_time_css%> "><%=event.get_time%></div>
+							<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block__top clickable-hover" 
+									onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
+								<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
+							</div>
+							<div class="event-block__bottom">
+								<small class="event-title text-right"><%= event.organization%></small>
+								<strong><%= event.title %></strong>
+								<small class="event-location"><%= event.location %></small>
+								<% if event.user_id==current_user.try(:id)%>
+									<%link_to fa_icon("pencil-square lg"), edit_event_path(event),"data-no-turbolink"=>true%>
+								<% end %>
 							</div>
 						</div>
-					<% end %>
-					<!-- current events End -->
+					</div>
+				<% end %>
+				<!-- current events End -->
 
-					<!-- future events -->
-					<% @future_events.each do |event| %>
-						<div class="event-block-wrapper">
-							<div class="event-block <%=event.get_block_theme%>">
-								<!-- small class="event-type"><%=event.event_type%></small -->
-								<div class="event-date <%=event.get_time_css%> "><%=event.get_time%></div>
-								<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block__top clickable-hover" 
-										onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
-									<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
-								</div>
-								<div class="event-block__bottom">
-									<small class="event-title text-right"><%= event.organization%></small>
-									<strong><%= event.title %></strong>
-									<small class="event-location"><%= event.location %></small>
-									<% if event.user_id==current_user.try(:id)%>
-										<%link_to fa_icon("pencil-square lg"), edit_event_path(event),"data-no-turbolink"=>true%>
-									<% end %>
-								</div>
+				<!-- future events -->
+				<% @future_events.each do |event| %>
+					<div class="event-block-wrapper col-md-3 col-sm-6 col-xs-12">
+						<div class="event-block <%=event.get_block_theme%>">
+							<!-- small class="event-type"><%=event.event_type%></small -->
+							<div class="event-date <%=event.get_time_css%> "><%=event.get_time%></div>
+							<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block__top clickable-hover" 
+									onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
+								<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
+							</div>
+							<div class="event-block__bottom">
+								<small class="event-title text-right"><%= event.organization%></small>
+								<strong><%= event.title %></strong>
+								<small class="event-location"><%= event.location %></small>
+								<% if event.user_id==current_user.try(:id)%>
+									<%link_to fa_icon("pencil-square lg"), edit_event_path(event),"data-no-turbolink"=>true%>
+								<% end %>
 							</div>
 						</div>
-					<% end %>
-					<!-- future events End -->
-
-					<!-- past events -->
-					<% @past_events.each do |event| %>
-						<div class="event-block-wrapper">
-							<div class="event-block <%=event.get_block_theme%>">
-								<!-- small class="event-type"><%=event.event_type%></small -->
-								<div class="event-date <%=event.get_time_css%> "><%=event.get_time%></div>
-								<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block__top clickable-hover" 
-										onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
-									<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
-								</div>
-								<div class="event-block__bottom">
-									<small class="event-title text-right"><%= event.organization%></small>
-									<strong><%= event.title %></strong>
-									<small class="event-location"><%= event.location %></small>
-									<% if event.user_id==current_user.try(:id)%>
-										<%link_to fa_icon("pencil-square lg"), edit_event_path(event),"data-no-turbolink"=>true%>
-									<% end %>
-								</div>
-							</div>
-						</div>
-					<% end %>
-					<!-- past events End -->
+					</div>
+				<% end %>
+				<!-- future events End -->
+				
+				<!-- end of list all events -->
 					
-					<!-- end of list all events -->
-					
-				</div>
 			</div>
 			<!-- End of Current Activities -->
+
+		</div>
+		
+		
+		<div class="row">
+
+			<!-- Past Activities -->
+			<div class="events-block col-xs-12">
+				<h1>已結束活動</h1>
+					
+				<!-- past events -->
+				<% @past_events.each do |event| %>
+					<div class="event-block-wrapper col-md-3 col-sm-6 col-xs-12">
+						<div class="event-block <%=event.get_block_theme%>">
+							<!-- small class="event-type"><%=event.event_type%></small -->
+							<div class="event-date <%=event.get_time_css%> "><%=event.get_time%></div>
+							<div id="event-<%=event.id%>" href="/events/<%=event.id%>" class="event-block__top clickable-hover" 
+									onmouseover="$(this).addClass('mouse-on')" onmouseleave="$(this).removeClass('mouse-on')">
+								<%=image_tag(event.cover.url, :class => "event-image", :alt=> "poster", :onclick=>"goToHref($(this).parent().attr('href'), true)") %>
+							</div>
+							<div class="event-block__bottom">
+								<small class="event-title text-right"><%= event.organization%></small>
+								<strong><%= event.title %></strong>
+								<small class="event-location"><%= event.location %></small>
+								<% if event.user_id==current_user.try(:id)%>
+									<%link_to fa_icon("pencil-square lg"), edit_event_path(event),"data-no-turbolink"=>true%>
+								<% end %>
+							</div>
+						</div>
+					</div>
+				<% end %>
+				<!-- past events End -->
+				
+				<!-- end of list all events -->
+					
+			</div>
+			<!-- End of Past Activities -->
 
 		</div>
 		
