--- a/app/views/user/course_stat/_xtmpl_cm_check.html.erb
+++ b/app/views/user/course_stat/_xtmpl_cm_check.html.erb
@@ -15,7 +15,7 @@
 				obj.parent().parent().append("<span id='' class='fader text-success'>選擇成功！</span>");
 				$(".fader").fadeOut(3000,function(){
 					$(this).remove();
-					obj.parent().toggleClass("hidden");
+					//obj.parent().toggleClass("hidden");
 				});
 			},
 			error:function(){
