show real id in course history table

--- a/app/views/user/courses.html.erb
+++ b/app/views/user/courses.html.erb
@@ -39,7 +39,11 @@
 				{% } %}
 				
 				<tr>
-					<td>
+          {% if(course.real_id){ %}
+					<td title="{%=course.real_id%}">
+          {% }else{ %}
+          <td>
+          {% } %}
 						{%=course.name%}
 						{% if(course.brief!=""){ %}
 							| {%=course.brief%}
