Rearrange title & info text
Conflicts:

	app/views/events/index.html.erb

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -124,9 +124,8 @@
 
 .event-block{
 	background: rgba(255, 255, 255, 0.7);
-	height: 200px;
 	margin: 1px 3px;
-	padding: 20px 10px;
+	padding: 20px 10px 10px;
 	font-size: 16px;
 }
 
@@ -136,13 +135,11 @@
 	background: rgba(255, 255, 255, 0.7);
 	border:0px solid #f8d4d4;
 }
-
 .event-block__theme--past{
 	//border:2px solid #d1d1e0;
 	background: rgba(209, 209, 224, 0.4);
 	border:0px solid #d1d1e0;
 }
-
 .event-block__theme--future{
 	//border:2px solid #c1eaff;
 	background: rgba(193, 234, 255, 0.4);
@@ -154,6 +151,68 @@
 }
 .event-block__bottom{
 	border: 2px 0 0 0 solid #c1eaff;
+}
+
+.event-title {
+	border-bottom: 1px solid #ccc;
+	font-size: 18px;
+	height: 3.5em;
+	margin: 0 0 5px 0; 
+	overflow: hidden;
+	padding: 7px 0;
+}
+
+.event-info {
+	color: #555;
+	height: 4em;
+	overflow: hidden;
+}
+
+.info-item {
+    padding-left: 2.5em;
+    text-indent:-2.1em;
+}
+
+.event-image{
+	@extend .img-responsive;
+	@extend .img-rounded;
+	height: 120px;
+	width: 250px;
+}
+.event-date{
+	@extend .text-right;
+	//@extend .flag;
+	position: absolute;
+	padding: 2px 2px;
+	height: 15%;
+	top: 3px;
+	bottom: auto;
+	right: 5%;
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.event-date__theme--today{
+	color: #5BA1DC;
+	//background: #f8d4d4;
+}
+.event-date__theme--past {
+	color: gray;
+	//background: #d1d1e0;
+}
+.event-date__theme--future{
+	color: #5BA1DC;
+	//background: #ccf1ff; 
+}
+
+.event-type{
+	//@extend .text-right;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	font-size: 16px
 }
 
 .flag {  /* origin from css-tricks.com, via Zoe Rooney */
@@ -170,56 +229,7 @@
 	border-left: 30px solid transparent; 
 	border-right: 30px solid transparent; 
 }
-.event-date{
-	@extend .text-right;
-	//@extend .flag;
-	position: absolute;
-	padding: 2px 2px;
-	height: 15%;
-	top: 3px;
-	bottom: auto;
-	right: 5%;
-	font-size: 16px;
-	font-weight: bold;
-}
-.event-date__theme--today{
-	color: #5BA1DC;
-	//background: #f8d4d4;
-}
-.event-date__theme--past {
-	color: gray;
-	//background: #d1d1e0;
-}
-.event-date__theme--future{
-	color: #5BA1DC;
-	//background: #ccf1ff; 
-}
-.event-type{
-	//@extend .text-right;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	font-size: 16px
-}
+
 .wrapper{
 	vertical-align: middle;
-}
-
-.event-title{
-	display: inline-block;
-}
-.event-location{
-	//@extend .pull-right;
-	position: absolute;
-	display: overflow;
-	bottom: 10px;
-	right: 20px;
-}
-.event-image{
-	@extend .img-responsive;
-	@extend .img-rounded;
-	height: 120px;
-	width: 250px;
 }
