Image display half done

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -148,7 +148,12 @@
 
 .event-block__top{
 	padding: 3px 3px;
+	height: 230px;
+	overflow: hidden;
 }
+.event-image{
+}
+
 .event-block__bottom{
 	border: 2px 0 0 0 solid #c1eaff;
 }
@@ -173,12 +178,6 @@
     text-indent:-2.1em;
 }
 
-.event-image{
-	@extend .img-responsive;
-	@extend .img-rounded;
-	height: 120px;
-	width: 250px;
-}
 .event-date{
 	@extend .text-right;
 	//@extend .flag;
