Add new tip of how to delete courses in cart

--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -86,7 +86,8 @@
 	</li>
 	<li data-id="shopping-cart" data-button="Next">
 		<h4>收藏課程</h4>
-		<p>點此察看在「全校課程」中收藏的課程</p>
+		<p>點此察看在「全校課程」中收藏的課程
+                <br>點選右上角「課程收藏」<font color="red">刪除</font>已收藏的課程</p>
 	</li>
 	<li data-id="copy-it-simu" data-button="Next">
 		<h4>分享課表</h4>
